deploy: 44ea01874e7307aec4631a5abe4a4091d7a2454f

--- a/contrib_modules/discopower/discopower.html
+++ b/contrib_modules/discopower/discopower.html
@@ -112,10 +112,10 @@
  to true:
 </p>
 <div class="codehilite">
- <pre><span></span><code>    'module.enable' =&gt; [
-         'discopower' =&gt; true,
-         …
-    ],
+ <pre><span></span><code><span class="x">    'module.enable' =&gt; [</span>
+<span class="x">         'discopower' =&gt; true,</span>
+<span class="x">         …</span>
+<span class="x">    ],</span>
 </code></pre>
 </div>
 <h2 id="configuration">
